--- a/tmux.conf
+++ b/tmux.conf
@@ -16,16 +16,22 @@ set -g status-interval 5
 set -g status-left-length 32
 set -g status-right-length 150
 
-set -g status-fg colour234
-set -g status-bg colour238
-set -g status-right-fg white
-set -g status-right-bg colour238
-set -g window-status-activity-attr bold
-set -g pane-border-fg colour245
-set -g pane-active-border-fg colour39
-set -g message-fg colour16
-set -g message-bg colour221
-set -g message-attr bold
+# set -g status-fg colour234
+# set -g status-bg colour238
+set -g status-style fg=colour234,bg=colour238
+# set -g status-right-fg white
+# set -g status-right-bg colour238
+set -g status-right-style fg=white,bg=colour238
+# set -g window-status-activity-attr bold
+set -g window-status-activity-style bold
+# set -g pane-border-fg colour245
+set -g pane-border-style fg=colour245
+# set -g pane-active-border-fg colour39
+set -g pane-active-border-style fg=colour39
+# set -g message-fg colour16
+# set -g message-bg colour221
+# set -g message-attr bold
+set -g message-style fg=colour16,bg=colour221,bold
 
 set -g status-left '#[fg=colour235,bg=colour252,bold] #S #[fg=colour252,bg=colour238,nobold]'
 set -g window-status-format "#[fg=white,bg=colour240] #I #W "
