--- a/tmux.conf
+++ b/tmux.conf
@@ -1,84 +1,155 @@
-# Set terminal
-set -g default-terminal "screen-256color"
+# For the tmux manual, see
+# http://man.openbsd.org/OpenBSD-current/man1/tmux.1
 
-setw -g mode-keys vi
-
-# Enable setting window titles
-set-option -g set-titles on
-
-# Place the stats bar at the top
-set-option -g status-position top
-
-# Update status bar every 5 seconds
-set -g status-interval 5
-
-# Better project name in status bar
-set -g status-left-length 32
-set -g status-right-length 150
-
-# set -g status-fg colour234
-# set -g status-bg colour238
-set -g status-style fg=colour234,bg=colour238
-# set -g status-right-fg white
-# set -g status-right-bg colour238
-set -g status-right-style fg=white,bg=colour238
-# set -g window-status-activity-attr bold
-set -g window-status-activity-style bold
-# set -g pane-border-fg colour245
-set -g pane-border-style fg=colour245
-# set -g pane-active-border-fg colour39
-set -g pane-active-border-style fg=colour39
-# set -g message-fg colour16
-# set -g message-bg colour221
-# set -g message-attr bold
-set -g message-style fg=colour16,bg=colour221,bold
-
-set -g status-left '#[fg=colour235,bg=colour252,bold] #S #[fg=colour252,bg=colour238,nobold]'
-set -g window-status-format "#[fg=white,bg=colour240] #I #W "
-set -g window-status-current-format "#[fg=colour234,bg=colour39]#[fg=colour25,bg=colour39,noreverse,bold] #I #W #[fg=colour39,bg=colour234,nobold]"
-set -g status-right '#[fg=colour243,bg=colour238]#[fg=white,bg=colour243,bold]#(uptime | cut -d":" -f4- | sed s/,//g) '
-
+# --------------------
+# General
+# --------------------
+# ^S as keymap prefix.
+# unbind C-b
+# set -g prefix ^S
 # set prefix to control-z
 unbind C-b
 set -g prefix C-z
+
+# Colors for borders of current active pane.
+#set -g pane-active-border-style fg=blue,bg=blue
+# set -g pane-border-style 'fg=colour19 bg=colour0'
+# set -g pane-active-border-style 'bg=colour0 fg=colour9'
+set -g pane-border-style 'fg=colour240 bg=colour0'
+set -g pane-active-border-style 'bg=colour0 fg=colour111'
+
+set -g bell-action other
+set -g visual-bell on
+
+set -s escape-time 0
+
+if-shell -b '[ "$(echo "$TMUX_VERSION < 2.6" | bc)" = 1 ]' \
+  "set -g bell-on-alert on"
+if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.6" | bc)" = 1 ]' \
+  "set -g activity-action other; \
+   set -g bell-action other; \
+   set -g visual-activity both; \
+   set -g visual-bell both;"
+
+# Mouse support.
+set -g mouse on
+# fallback for version < 2.1
+# set -g mode-mouse on
+# set -g mouse-select-pane on
+# set -g mouse-resize-pane on
+# set -g mouse-select-window on
+
+set -g default-terminal "xterm-256color"
+
+# Enable true (24bit) colors for version >= 2.2
+# See https://deductivelabs.com/en/2016/03/using-true-color-vim-tmux/
+# set -ga terminal-overrides ",xterm-256color:Tc"
+set -ga terminal-overrides ",*256col*:Tc"
+
+# Fix for 'open' command in OS X ("The window server could not be contacted ...")
+# This needs 'reattach-to-user-namespace' installed by `brew update && brew install reattach-to-user-namespace`
+# See https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
+# See http://www.elmund.io/osx/2015/07/10/open-command-in-osx-tmux/
+# set -g default-command "command -v reattach-to-user-namespace 2>&1 > /dev/null && reattach-to-user-namespace -l ${SHELL}"
+
+# Scrollback buffer size (lines).
+set -g history-limit 10000
+
+
+# --------------------
+# Status Bar
+# --------------------
+set -g status on
+set -g status-position top
+set -g status-bg colour235
+set -g status-fg white
+set-option -g status-style bg=default
+
+# Refresh rate (in secs).
+set -g status-interval 10
+
+# Left portion of status bar.
+set -g status-left \
+    "#[fg=black,bg=brightred] s #[fg=brightred,bg=colour235] ###S  #[fg=black,bg=brightyellow] hs #[fg=brightyellow,bg=colour235] @#h"
+set -g status-left-length 50
+
+# Right portion of status bar.
+# set -g status-right "#(bash $HOME/.tmux/tmux-status-right)"
+# set -g status-right-length 80
+set -g status-right "#[fg=black,bg=brightyellow] stat #[fg=brightyellow,bg=colour235] #(tmux-mem-cpu-load -g 0 --interval 5)"
+set -g status-right-length 60
+
+# Middle portion of status bar (window list).
+# Attributes: bright/bold, dim, underscore, blink, reverse, hidden, italics
+# Base index starts from 1 instead of 0.
+set -g status-justify centre
+set -g base-index 1
+set-window-option -g pane-base-index 1
+#set -g window-status-separator "  "
+set -g window-status-separator " "
+
+set -g window-status-format " #I #[fg=white,bg=colour235] #W #F "
+set -g window-status-style fg=black,bg=white
+
+set -g window-status-bell-style fg=black,bg=brightred
+set -g window-status-activity-style fg=black,bg=brightred
+
+# Active window.
+setw -g window-status-current-format \
+    "#[fg=black,bg=blue] #I #[fg=blue,bg=colour235] #W #F "
+
+set -g focus-events on
+
+# --------------------
+# Key Bindings
+# --------------------
+# Vi bindings for copy mode.
+setw -g mode-keys vi
+
+# bind-key C-s last-window
+# bind-key S send-prefix
 bind z send-keys C-z
 bind C-z last-window
 
-set -g base-index 1
-set-window-option -g pane-base-index 1
+# Rebind c/%/" to open a new window in the same working directory.
+bind c new-window -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
+bind s split-window -c "#{pane_current_path}"
 
-bind | split-window -h  # Split window vertically with |
-bind - split-window     # Split window horizontally with -
+# Use alt (option) + number to switch window.
+bind-key -n M-1 select-window -t 1
+bind-key -n M-2 select-window -t 2
+bind-key -n M-3 select-window -t 3
+bind-key -n M-4 select-window -t 4
+bind-key -n M-5 select-window -t 5
+bind-key -n M-6 select-window -t 6
+bind-key -n M-7 select-window -t 7
+bind-key -n M-8 select-window -t 8
+bind-key -n M-9 select-window -t 9
 
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-bind ` select-window -t 0
+bind-key -n M-t new-window
+bind-key -n M-w kill-window
 
-bind H resize-pane -L 5
-bind J resize-pane -D 5
-bind K resize-pane -U 5
-bind L resize-pane -R 5
+# Break current pane into a new window/tab.
+bind T break-pane
 
-# prefix C-d to clear the scrolled off (hidden) buffer lines
-bind C-d clear-history
+# C-h/j/k/l to switch to left/down/up/right pane.
+# bind h run "tmux select-pane -L"
+# bind j run "tmux select-pane -D"
+# bind k run "tmux select-pane -U"
+# bind l run "tmux select-pane -R"
 
-# Search for previous error
-bind-key e copy-mode \; send-keys "?Error" C-m
+# Smart pane switching with awareness of vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+#bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-bind-key -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy" \; display-message "Copied to clipboard"
+# Quickly reload config file.
+bind r source-file ~/.tmux.conf
 
-
-set -sg escape-time 2
-
-# scrollback buffer size increase
-set -g history-limit 100000
-
-# Use up and down arrows for temporary "maximize"
-unbind Up; bind Up resize-pane -Z; unbind Down; bind Down resize-pane -Z
-
-# Allows scrolling and selecting in copy-mode
-set -g mouse on
-
-if-shell '[[ -e ~/.tmux.conf.local ]]' 'source-file ~/.tmux.conf.local'
+# Plugins.
+#run-shell $HOME/.tmux/tmux-sessionist/sessionist.tmux
